Bug 29279 - undefined reference to `mbstowcs_chk' after 464d189b9622932a75302290625de84931656ec0
Summary: undefined reference to `mbstowcs_chk' after 464d189b9622932a75302290625de8493...
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: 2.36
Assignee: Noah Goldstein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-23 13:44 UTC by Martin Liska
Modified: 2022-06-27 01:48 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed: 2022-06-23 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liska 2022-06-23 13:44:12 UTC
After the revision, the following fails:

$ cat /tmp/x.c
#include <stdlib.h>

const char *name;
int len;

int main()
{
	if (mbstowcs (NULL, name, len) ==  -1)
	      return 0;
}

$ gcc /tmp/x.c -D_FORTIFY_SOURCE=2 -O2
/usr/lib64/gcc/x86_64-suse-linux/13/../../../../x86_64-suse-linux/bin/ld: /tmp/ccWxqRJf.o: in function `main':
x.c:(.text.startup+0x15): undefined reference to `mbstowcs_chk'
collect2: error: ld returned 1 exit status
Comment 1 Siddhesh Poyarekar 2022-06-23 13:49:01 UTC
Should get fixed once Noah pushes this:

https://patchwork.sourceware.org/project/glibc/patch/20220622233442.2777550-1-goldstein.w.n@gmail.com/
Comment 2 Noah Goldstein 2022-06-23 15:28:51 UTC
(In reply to Siddhesh Poyarekar from comment #1)
> Should get fixed once Noah pushes this:
> 
> https://patchwork.sourceware.org/project/glibc/patch/20220622233442.2777550-
> 1-goldstein.w.n@gmail.com/

Pushed it.
Comment 3 Siddhesh Poyarekar 2022-06-27 01:48:15 UTC
Should be fixed now.